test/error/PreElifUnmatched.ci
public static class Test
{
	public static bool Run()
	{
#elif true //ERROR: '#elif' with no matching '#if'
		return true;
	}
}
